# 3s-rnds-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/rnds_client/: __init__.py  auth.py  base_client.py  client.py  exceptions.py  parsers.py  settings.py  tokens.py
src/rnds_client/capabilities/: __init__.py  establishments.py  patients.py  rira.py
tests/: test_access_token.py  test_establishments.py  test_parsers.py  test_public_api.py  test_settings.py
