[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3s-rnds-client"
version = "0.1.4"
description = "Cliente Python assíncrono para integração com a RNDS em aplicações Django."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
authors = [
  { name = "3S" },
]
dependencies = [
  "django>=4.2",
  "httpx>=0.27,<1.0",
]
keywords = ["django", "fhir", "rnds", "saude", "datasus"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"rnds_client" = ["py.typed"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
